syntax = "proto3";

package pb;

option go_package = "/pb";

import "google/api/annotations.proto";

service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string message = 2;
}
